Lesson 4: Add appeal form (web & api) (#4)
* Lesson 3: Add news (api & web) and pages (api)

Сделан Lesson 3

* Lesson 4

* Lesson4 HM

* Правки

Ну, собственно, все эти файлы были созданы автоматически, делал всё прям как на паре, вот они и вылезли тут.
Что было подмечено как ненужное -- всё было вырезано

* Убрал дублирование

* Revert "Lesson4 HM"

This reverts commit e87dd7baf7c90688ae7a8858ab122b93f8f12611.

* Я всё сломал там, но теперь всё починил, правки были сделаны...

* Убрал у почты
