# fefu-app2/app/Models/Appeal.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+/**
+ * App\Models\Appeal
+ *
+ * @property int $id
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property string $name
+ * @property string|null $phone
+ * @property string|null $email
+ * @property string $message
+ * @property int|null $user_id
+ * @property-read \App\Models\User|null $user
+ * @method static \Database\Factories\AppealFactory factory(...$parameters)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereEmail($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereMessage($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal wherePhone($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUserId($value)
+ * @mixin \Eloquent
+ */
+class Appeal extends Model
+{
+    use HasFactory;
+
+    public function user() : BelongsTo {
+        return $this->belongsTo(User::class);
+    }
+}
